# jarvis-ai

./: .env  .gitignore  DATA_SCHEMA.md  MARITIME_ROUTING_UPDATE.md  README.md  demo.py  requirements-dev.txt  requirements.txt  vercel.json
.claude/: settings.local.json
backend/: .env.example  .gitignore  main.py  pyproject.toml  start_server.bat
backend/agents/: __init__.py  compliance_cop.py  diplomat.py  state.py  strategist_agent.py  tools.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  locations.py  regumap.py  router.py  shipments.py  strategist.py  telemetry.py
backend/app/lib/: compliance_rules.py  spatial.py
backend/app/models/: __init__.py  shipment.py  telemetry.py  user.py
backend/app/repositories/: user_repo.py
backend/app/schemas/: auth.py  base.py  regumap.py  shipments.py  strategist.py  telemetry.py
backend/app/services/: auth_service.py  shipment_service.py  twilio_service.py
backend/scripts/: eda_logistics_datasets.py  etl_logistics_spatial_supabase.py  migrate_country_risk_profiles.py  migrate_logistics_to_supabase.py
backend/services/: __init__.py  crisis_manager.py  sentinel_monitor.py
backend/sql/: logistics_cleanup.sql  logistics_fk_and_gist.sql  logistics_setup.sql  logistics_spatial_indexes.sql
docs/submission/: DEMO_VIDEO_SHOTLIST.md  INITIAL_SOLUTION_PACKAGE_CHECKLIST.md  REPRODUCIBILITY_AND_USAGE_DRAFT.md  (+3 more)
frontend/: package.json  pnpm-lock.yaml  three.d.ts
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
(+34 files in other folders)
