[project]
name = "jarvis-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "anthropic>=0.94.0",
    "asyncpg>=0.31.0",
    "elevenlabs>=2.42.0",
    "fastapi>=0.135.3",
    "geojson>=3.2.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pinecone>=8.1.2",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "shapely>=2.1.2",
    "sqlmodel>=0.0.38",
    "sse-starlette>=3.3.4",
    "structlog>=25.5.0",
    "twilio>=9.10.4",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]
